--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          ref: master
 
       - name: Generate Snake
         uses: Platane/snk@v3
