--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout main branch
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
@@ -21,39 +21,26 @@ jobs:
 
       - name: Generate Snake
         uses: Platane/snk@v3.2.0
-
         with:
           github_user_name: AbhiMP2804
           outputs: |
-            github-contribution-grid-snake.svg
-            github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
-      - name: Prepare output branch
+      - name: Push snake to output branch
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-          # Create output branch if it doesn't exist
           git fetch origin output || true
-          if git show-ref --verify --quiet refs/heads/output; then
-            git checkout output
-          else
-            git checkout --orphan output
-            git rm -rf .
-          fi
 
-          # Move generated files (only if they exist)
-          for f in github-contribution-grid-snake.svg github-contribution-grid-snake-dark.svg; do
-            if [ -f "$f" ]; then
-              mv "$f" .
-            fi
-          done
+          git checkout --orphan output
+          git reset --hard
 
-          # Commit only if there are changes
+          mv dist/* .
+
+          rm -rf dist
+
           git add .
-          if git diff-index --quiet HEAD; then
-            echo "No changes to commit"
-          else
-            git commit -m "Update snake"
-            git push origin output --force
-          fi
+          git commit -m "Update snake" || echo "No changes to commit"
+          git push origin output --force
