--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,13 +13,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout master branch
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
           ref: master
 
-      - name: Generate Snake
+      - name: Generate Snake SVG
         uses: Platane/snk@v3.2.0
         with:
           github_user_name: AbhiMP2804
@@ -27,26 +27,34 @@ jobs:
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
-      - name: Save generated files for later
+      - name: Store generated files
         run: |
-          mkdir snake_files
-          cp dist/* snake_files/
+          mkdir output_snk
+          cp dist/* output_snk/
 
       - name: Switch to output branch
         run: |
           git fetch origin output || true
-          git checkout output 2>/dev/null || git checkout --orphan output
-          git reset --hard
-          git rm -rf .
+          if git show-ref --verify --quiet refs/heads/output; then
+            git checkout output
+          else
+            git checkout --orphan output
+          fi
 
-      - name: Move files to output branch and push
+          # Only remove files if they exist
+          ls -A1 | xargs -I{} git rm -rf {} || true
+
+      - name: Add and Commit snake files
         run: |
-          cp snake_files/* .
-          rm -rf snake_files dist
+          cp output_snk/* .
+          rm -rf output_snk dist
 
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
           git add .
-          git commit -m "Update snake" || echo "No changes"
+          git commit -m "Update snake" || echo "No changes to commit"
+
+      - name: Push to output branch
+        run: |
           git push origin output --force
